# file_copy_checker

./: Cargo.toml  README.md
src/: duplicate.rs  filecountresult.rs  ignore.rs  main.rs  readfile.rs
