[package]
name = "file_copy_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"]}
indicatif = "0.17.5"
md5hash = "0.1.1"
