[package]
name = "filecopychecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
console = "0.15.7"
csv = "1.2.2"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"]}
filesize = "0.2.0"
genpdf = "0.2.0"
home = "0.5.5"
humansize = "2.1.3"
indicatif = "0.17.5"
md5hash = "0.1.1"
rayon = "1.7.0"
use = "0.0.0"